# quirc-rs

./: .gitmodules  Cargo.toml  README.md
examples/: rscam_win.rs
mjpeg-sys/: Cargo.toml  build.rs
mjpeg-sys/src/: lib.rs  mjpeg.rs  mjpeg_mem.c  mjpeg_mem.h
quirc-sys/: Cargo.toml  build.rs
quirc-sys/src/: convert.rs  lib.rs  utils.rs
src/: lib.rs
